syntax = "proto3";
package penumbra.util.tendermint_proxy.v1;

import "google/protobuf/timestamp.proto";
import "tendermint/crypto/proof.proto";
import "tendermint/p2p/types.proto";
import "tendermint/types/block.proto";
import "tendermint/types/types.proto";
import "tendermint/types/validator.proto";

// Defines the gRPC query service for proxying requests to an upstream Tendermint RPC.
service TendermintProxyService {
  // Status queries the current status.
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}

  // Broadcast a transaction asynchronously.
  rpc BroadcastTxAsync(BroadcastTxAsyncRequest) returns (BroadcastTxAsyncResponse) {}

  // Broadcast a transaction synchronously.
  rpc BroadcastTxSync(BroadcastTxSyncRequest) returns (BroadcastTxSyncResponse) {}

  // Fetch a transaction by hash.
  rpc GetTx(GetTxRequest) returns (GetTxResponse) {}

  // ABCIQuery defines a query handler that supports ABCI queries directly to the
  // application, bypassing Tendermint completely. The ABCI query must contain
  // a valid and supported path, including app, custom, p2p, and store.
  rpc ABCIQuery(ABCIQueryRequest) returns (ABCIQueryResponse) {}

  // GetBlockByHeight queries block for given height.
  rpc GetBlockByHeight(GetBlockByHeightRequest) returns (GetBlockByHeightResponse) {}
}

// GetTxRequest is the request type for the GetTx RPC method.
message GetTxRequest {
  // Hash of transaction to retrieve
  bytes hash = 1;
  // Include proofs of the transaction's inclusion in the block
  bool prove = 2;
}

// GetTxResponse is the response type for the GetTx RPC method.
message GetTxResponse {
  // Hash of transaction
  bytes hash = 1;
  uint64 height = 2;
  uint64 index = 3;
  TxResult tx_result = 4;
  bytes tx = 5;
}

message TxResult {
  string log = 1;
  uint64 gas_wanted = 2;
  uint64 gas_used = 3;
  repeated Tag tags = 4;
}

message Tag {
  bytes key = 1;
  bytes value = 2;
  bool index = 3;
}

// BroadcastTxAsyncRequest is the request type for the BroadcastTxAsync RPC method.
message BroadcastTxAsyncRequest {
  bytes params = 1;
  uint64 req_id = 2;
}

// BroadcastTxAsyncResponse is the response type for the BroadcastTxAsync RPC method.
message BroadcastTxAsyncResponse {
  uint64 code = 1;
  bytes data = 2;
  string log = 3;
  bytes hash = 4;
}

// BroadcastTxSyncRequest is the request type for the BroadcastTxSync RPC method.
message BroadcastTxSyncRequest {
  bytes params = 1;
  uint64 req_id = 2;
}

// BroadcastTxSyncResponse is the response type for the BroadcastTxSync RPC method.
message BroadcastTxSyncResponse {
  uint64 code = 1;
  bytes data = 2;
  string log = 3;
  bytes hash = 4;
}

// GetStatusRequest is the request type for the Query/GetStatus RPC method.
message GetStatusRequest {}

// GetStatusResponse is the response type for the Query/GetStatus RPC method.
message GetStatusResponse {
  .tendermint.p2p.DefaultNodeInfo node_info = 1;
  SyncInfo sync_info = 2;
  .tendermint.types.Validator validator_info = 3;
}

message SyncInfo {
  bytes latest_block_hash = 1;
  bytes latest_app_hash = 2;
  uint64 latest_block_height = 3;
  google.protobuf.Timestamp latest_block_time = 4;
  // These are implemented in tendermint, but not
  // in tendermint-rpc.
  // bytes earliest_block_hash = 5;
  // bytes earliest_app_hash = 6;
  // uint64 earliest_block_height = 7;
  // google.protobuf.Timestamp earliest_block_time = 8;
  bool catching_up = 9;
}

// ABCIQueryRequest defines the request structure for the ABCIQuery gRPC query.
message ABCIQueryRequest {
  bytes data = 1;
  string path = 2;
  int64 height = 3;
  bool prove = 4;
}

// ABCIQueryResponse defines the response structure for the ABCIQuery gRPC query.
//
// Note: This type is a duplicate of the ResponseQuery proto type defined in
// Tendermint.
message ABCIQueryResponse {
  uint32 code = 1;
  // DEPRECATED: use "value" instead
  reserved 2;
  string log = 3; // nondeterministic
  string info = 4; // nondeterministic
  int64 index = 5;
  bytes key = 6;
  bytes value = 7;
  .tendermint.crypto.ProofOps proof_ops = 8;
  int64 height = 9;
  string codespace = 10;
}

// GetBlockByHeightRequest is the request type for the Query/GetBlockByHeight RPC method.
message GetBlockByHeightRequest {
  int64 height = 1;
}

// GetBlockByHeightResponse is the response type for the Query/GetBlockByHeight RPC method.
message GetBlockByHeightResponse {
  .tendermint.types.BlockID block_id = 1;

  .tendermint.types.Block block = 2;
}
